# ScreenSaver

./: CMakeLists.txt  screensaver.kdev4
headers/: gldata.hpp  glscene.hpp  resources.hpp  saver_main_interface.hpp  screensaver.hpp  setup_dialog.hpp
resources/: setup_dialog.ui
sources/: glscene.cpp  main.cpp  saver_main_interface.cpp  screensaver.cpp  setup_dialog.cpp
